Fix spacing and bg color in desktop

--- a/src/styles/06-components/_cv-item.scss
+++ b/src/styles/06-components/_cv-item.scss
@@ -6,9 +6,6 @@
 .#{$namespace}-cv-item {
   margin-bottom: 50px;
 }
-.#{$namespace}-cv-item:last-of-type {
-  padding-bottom: 50px;
-}
 .#{$namespace}-cv-item .#{$namespace}-body+.#{$namespace}-body:last-of-type {
   margin-bottom: 0;
 }
